2009-01-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/bmp.c (ReadBMPImage): Fix assertion thrown for BMP files
	with negative image height values.  Resolves SF issue 2523536 "bug
	in bmp coder".

	* Makefile.am: Don't install Magick++ headers if Magick++ is
	disabled.

	* GraphicsMagick.spec.in: --enable-lzw option is no longer used.

2009-01-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* version.sh: GraphicsMagick 1.2.7 released.

2008-12-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (MogrifyImage): The -write option was not
	implemented in a useful fashion and the +write option never worked
	at all.  Re-implement -write and eliminate +write from the
	documentation since +write is not needed.

2008-12-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c: Removed mention of -write from composite and
	convert help output since it can't work as specified with current
	command line architecture.
	* doc/options.imdoc: Removed documentation for composite and
	convert since it doesn't work.

2008-12-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): Fix bug with reading one bit per
	sample RGB images.

2008-12-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): Fix bug with 'ping' mode.

2008-11-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/utility.c (ExpandFilenames): Remove some arbitrary
	argument length limits.  Pass -convolve argument without any
	additional checking.  Verify that strings are not truncated during
	copy.
	(ListFiles): Be more memory efficient.
	* magick/fx.c (ConvolveImage): Fix formatting problem when logging
	the convolution kernel used.
	* magick/utility.c (TranslateTextEx): Support formatting huge
	comment text.

2008-11-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* config/delegates.mgk.in: Since we removed support for 'spawn' a